2011-09-01  Sancho Lerena <slerena@artica.es>

	* unix/plugins/grep_log,
	shellscript/linux/plugins/grep_log: Restored previous code because
	it needs to start searching on the last position known. First time
	plugin starts, seek to the final position to avoid fire old events
	detected in the log. Plugin only gives new events once starts to work

2011-08-31 Juan Manuel Ramon Vigo <juanmanuel.ramon@artica.es>

	* unix/plugins/grep_log
	shellscript/linux/plugins/grep_log: Changed parse_log
	function in order to retrieve token correctly.

2011-08-22  Sergio Martin <sergio.martin@artica.es>

	* win32/bin/PandoraAgent.exe: Updated the executable
	with the last code build fixing "runWMIQuery error"
	for bug 3394721

2011-08-18  Sergio Martin <sergio.martin@artica.es>

	* win32/windows/pandora_windows_info.h
	win32/windows/pandora_wmi.cc
	win32/windows/pandora_wmi.h
	win32/windows/pandora_windows_info.cc
	win32/bin/PandoraAgent.exe
	win32/bin/pandora_agent.conf
	win32/pandora_windows_service.cc: Added to the windows agent
	the address token with manual (specified address) and auto 
	(detecting from WMI the address) modes

2011-08-10  Vanessa Gil  <vanessa.gil@artica.es>

	* unix/pandora_agent.php: Fixed error reading collections of the configuration file.
	
2011-08-09  Miguel de Dios  <miguel.dedios@artica.es>

	* DEBIAN/control: fixed the name of package and update version number.

2011-08-03  Vanessa Gil  <vanessa.gil@artica.es>

	* unix/Linux/pandora_agent.conf
	unix/SunOS/pandora_agent.conf 
	unix/FreeBSD/pandora_agent.conf
	unix/HP-UX/pandora_agent.conf
	unix/AIX/pandora_agent.conf: Changed comment delayed startup line.	

2011-07-29  Koichiro Kikuchi <koichiro@rworks.jp>

	* unix/pandora_agent: Don't remove 1st line of the result of the PROC_CMDS,
	  1st line isn't a header. Also fixed and simplified some commands.

2011-07-18  Sergio Martin <sergio.martin@artica.es>

	* unix/Linux/pandora_agent.conf: Change default memory modules to get it with free command